--- a/src/styles/BuscaMedicamento.css
+++ b/src/styles/BuscaMedicamento.css
@@ -10,17 +10,19 @@
 display: flex;
 justify-content: center;
 width: 45%;
+padding: 20px;
 }
 
 .right {
 width: 55%;
+padding: 20px;
 }
 
 .filtros-left {
     display: flex;
     padding: 20px;
     width: 400px;
-    height: 45%;
+    height: 100%;
     border-style: solid;
     border-color: #2f4a3d;
     border-radius: 10px;
